# social-forests-protocol

./: .env.example  .gitleaksignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/workflows/: ci.yml  deploy.yml  security.yml
apps/web/: next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
contracts/forest_mythos_vault/: Cargo.toml
contracts/forest_mythos_vault/src/: lib.rs
contracts/journey_orchestrator/: Cargo.toml
contracts/journey_orchestrator/src/: lib.rs
contracts/journey_orchestrator/test_snapshots/test/: test_b2b_flow.1.json  test_evolve_nft.1.json  test_reward_leaves_and_forge.1.json  test_update_tree_record.1.json
contracts/journey_orchestrator/test_snapshots/tests/: test_10_nfts_with_independent_tree_records.1.json  test_claim_badge_accumulates_across_multiple_users.1.json  test_claim_badge_accumulates_multiple_users.1.json  test_claim_debits_pool.1.json  test_claim_empty_pool_fails.1.json  test_claim_exceeds_pool_fails.1.json  test_claim_from_empty_pool_fails.1.json  test_claim_mission_leaf_credits_user.1.json  test_claim_mission_leaf_debits_pool.1.json  test_claim_unauthorized_admin_fails.1.json  test_claim_updates_carbon_credits.1.json  test_claim_updates_ods_score.1.json  test_distribute_leaves_accumulates.1.json  test_distribute_leaves_increases_pool.1.json  test_distribute_leaves_negative_amount_fails.1.json  test_distribute_leaves_unregistered_company_fails.1.json  test_distribute_leaves_zero_amount_fails.1.json  test_evolve_already_lenda_fails.1.json  test_evolve_costs_are_correct.1.json  test_evolve_full_chain_to_lenda.1.json  test_evolve_insufficient_for_guardiao_fails.1.json  test_evolve_nft_already_legendary_fails.1.json  test_evolve_nft_common_to_uncommon.1.json  test_evolve_nft_evolve_costs_are_exponential.1.json  test_evolve_nft_full_chain_to_legendary.1.json  test_evolve_nft_insufficient_leaves_fails.1.json  test_evolve_nft_insufficient_leaves_for_rare_fails.1.json  test_evolve_nft_wrong_owner_fails.1.json  test_evolve_plantador_to_cultivador.1.json  test_evolve_wrong_owner_fails.1.json  test_forge_burns_exactly_100_leaves.1.json  test_forge_common_rwa_succeeds.1.json  test_forge_creates_plantador_nft.1.json  test_forge_insufficient_leaves_fails.1.json  test_forge_multiple_increments_counter.1.json  test_forge_multiple_nfts_increments_counter.1.json  test_forge_with_zero_leaves_fails.1.json  test_full_b2b2c_esg_flow.1.json  test_get_nft_mogno_fraction_by_rarity.1.json  test_get_nft_mogno_fraction_nonexistent_returns_zero.1.json  (+20 more)
contracts/sbt_reputation/: Cargo.toml
contracts/sbt_reputation/src/: lib.rs
contracts/sbt_reputation/test_snapshots/tests/: test_add_xp_and_level_up.1.json  test_create_and_get_sbt.1.json
docs/: SECURITY.md
src/app/: providers.jsx
(+159 files in other folders)
