[workspace]
members = [
    "contracts/rwa_vault",
    "contracts/sbt_reputation",
    "contracts/hero_journey", "contracts/florestas-protocol",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "25.3.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
