[workspace]
resolver = "2"

members = [
    "contracts/leaf_token",
    "contracts/collateral_vault",
    "contracts/guardian_id",
    "contracts/company_id",
    "contracts/journey_orchestrator",
    "contracts/forest_mythos_vault",
]

[workspace.dependencies]
soroban-sdk = "26.0.0"

# =====================================================================
# CONFIGURAÇÃO DE BUILD (Otimizado para Smart Contracts na Stellar)
# =====================================================================
[profile.release]
opt-level = "z"             # Otimiza o binário para ter o menor tamanho possível
overflow-checks = true      # Mantém a proteção matemática contra overflow
debug = 0                   # Remove as informações de depuração (debug)
strip = "symbols"           # Remove símbolos ocultos não utilizados
debug-assertions = false    # Desliga asserções pesadas em produção
panic = "abort"             # Aborta erros diretamente (comportamento obrigatório em WASM)
codegen-units = 1           # Força o compilador a olhar o código todo de uma vez (melhora o LTO)
lto = true                  # Link-Time Optimization (comprime drasticamente o arquivo final)
