[package]
name = "forest_mythos_vault"
version = "0.1.0"
edition = "2024"
description = "Motor dNFT e SBT para o ecossistema Florestas.Social"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
# Atualizado para a mesma versão do seu contrato hero_journey
soroban-sdk = "25.3.1"